# ScriptForge

./: .gitignore  CMakeLists.txt  README.md  github_dependabot.yml  vcpkg.json
.github/: dependabot.yml
include/scriptforge/: script_hub.hpp
src/: main.cpp  script_hub.cpp
tests/: test_main.cpp
